fixing table alignment

--- a/View/public/css/style-coord-table.css
+++ b/View/public/css/style-coord-table.css
@@ -139,7 +139,7 @@ body {
     display: flex;
     flex-direction: row;
     position: absolute;
-    margin: -25px 0px 0px 60px;
+    margin: -40px 0px 0px 60px;
 }
 
 .coordinatorsTable th, .tableHeader {
